feat(voucher): 实现秒杀优惠券功能
- 添加秒杀优惠券库存扣减逻辑- 实现秒杀时间校验与库存检查
- 新增订单ID生成与用户信息绑定- 完善秒杀接口并集成Redis ID生成器
-优化数据库事务处理与一致性保障- 更新MyBatis注解支持动态SQL执行

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,14 +4,16 @@ spring:
   application:
     name: hmdp
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.92.164.193:3306/heima?useSSL=false&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.0.2:3306/heima?useSSL=false&serverTimezone=UTC
     username: root
     password: 123456
+    hikari:
+      transaction-isolation: 2
   redis:
-    host: 47.92.164.193
+    host: 192.168.0.2
     port: 6379
-    password: 123321
+    password: 123456
     lettuce:
       pool:
         max-active: 10
@@ -25,3 +27,5 @@ mybatis-plus:
 logging:
   level:
     com.hmdp: debug
+
+
